[gd_scene load_steps=8 format=3 uid="uid://ojufvum2rabl"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_aq01f"]
[ext_resource type="Texture2D" uid="uid://bi0l0nygoeuaq" path="res://sprites/rocket_ship.png" id="1_yar1i"]
[ext_resource type="Texture2D" uid="uid://bn38eipprbojr" path="res://sprites/rocket_ship_launch.png" id="3_2skx4"]
[ext_resource type="Texture2D" uid="uid://c28csng4koseq" path="res://sprites/launch_button.png" id="4_h3igp"]

[sub_resource type="Animation" id="Animation_v2cub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RocketSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 512)]
}

[sub_resource type="Animation" id="Animation_7w636"]
resource_name = "launch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RocketSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 512), Vector2(640, -180)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2gbx3"]
_data = {
"RESET": SubResource("Animation_v2cub"),
"launch": SubResource("Animation_7w636")
}

[node name="World" type="Node2D"]
script = ExtResource("1_aq01f")

[node name="RocketSprite" type="Sprite2D" parent="."]
position = Vector2(640, 512)
scale = Vector2(2.407, 2)
texture = ExtResource("1_yar1i")

[node name="RocketFlareSprite" type="Sprite2D" parent="RocketSprite"]
position = Vector2(0, 16)
texture = ExtResource("3_2skx4")

[node name="RocketAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2gbx3")
}

[node name="LaunchTButton" type="TextureButton" parent="."]
offset_left = 1031.0
offset_top = 610.0
offset_right = 1225.0
offset_bottom = 675.0
texture_normal = ExtResource("4_h3igp")
stretch_mode = 4

[connection signal="button_down" from="LaunchTButton" to="." method="_on_launch_t_button_button_down"]
